# dckv

./: .gitignore  Cargo.toml  README.md  test.dcm
app/: Cargo.toml
app/src/: bench.rs  main.rs
database/: Cargo.toml
database/src/: error.rs  lib.rs  rocks.rs
parser/: Cargo.toml
parser/src/: error.rs  helpers.rs  lib.rs
