[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = "0.3"

[dependencies]
dckv-database = { path = "../database" }
dckv-parser = { path = "../parser" }
tokio = { version = "1.33.0", features = ["full"] }

[[bench]]
name = "bench"
path = "src/bench.rs"
harness = false